--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,5 @@
+$color_orange: #F9B300;
+
 * {
     padding: 0;
     margin: 0;
@@ -43,16 +45,83 @@ body {
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: 2fr 2fr;
         grid-auto-rows: 400px;
+        gap: 14px;
     }
 
     &__card{
         display: flex;
-        box-shadow: 0 0 20px 5px rgb(94, 94, 94);
+        box-shadow: 0 0 20px 1px rgb(94, 94, 94);
         background-color: #fff;
         border-radius: 20px;
+        overflow: hidden;
+        transition: all 0.3s;
 
-        &-1{
-            grid-row: 1/4;
+        &:hover{
+            transform: scale(1.01);
         }
+
+
+        img{
+            height: 100%;
+        }
+
+
+        &-text{
+            display: flex;
+            padding: 45px 80px 30px 80px ;
+            justify-content: center;
+            align-items: left;
+            flex-direction: column;
+            justify-content: space-between;
+            font-size: 20px;
+            line-height: 130%;
+        }
+
+        &-title{
+            font-size: 25px;
+            font-weight: 900;
+        }
+
+        &-link{
+            color: $color_orange;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            transition: all .3s;
+
+            &:hover{
+                text-decoration: underline;
+            }
+            
+            &:hover::after{
+                transform: scale(1.5) rotate(180deg);
+            }
+            
+            &::after{
+                content: '';
+                display: block;
+                background-image: url("../img/arrow.svg");
+                background-size: cover;
+                height: 12px;
+                width: 15px;
+                transition: all .3s;
+            }
+        }
+    }
+
+    &__1{
+        grid-column: span 3;
+    }
+
+    &__2{
+        grid-column: span 2;
+    }
+
+    &__3{
+        grid-column: span 3;
+    }
+
+    &__4{
+        grid-column: span 2;
     }
 }
